--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "engines": {
     "node": ">= 8.x",
-    "yarn": ">= 1.5.1",
+    "yarn": ">= 1.12.x",
     "npm": ">= this-repo-is-yarn-only:see-npmrc"
   },
   "husky": {
