--- a/.editorconfig
+++ b/.editorconfig
@@ -27,6 +27,5 @@ charset = utf-8
 # Possible values - true, false
 trim_trailing_whitespace = true
 
-[*.{js,jsx,html,css}]
-indent_size = 2
+[*.{js,jsx,ts,tsx,html,css}]
 insert_final_newline = true
