Jest should ignore dist folder

--- a/package.json
+++ b/package.json
@@ -88,6 +88,9 @@
     "collectCoverageFrom": [
       "src/**/*.{ts,tsx,js,jsx}",
       "!src/**/*.d.ts"
+    ],
+    "modulePathIgnorePatterns": [
+      "<rootDir>/dist"
     ]
   },
   "devDependencies": {
