Don't allow a mix of ts and js files

--- a/.gitignore
+++ b/.gitignore
@@ -133,5 +133,8 @@ $RECYCLE.BIN/
 dist
 
 # Don't allow both yarn.lock & package-lock.json
-package-lock.json
+package-lock.jso
+
+# Don't allow a mix of ts and js files
+src/**/*.js
 
