--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   "contributors": [
     "Johan Borestad <johan.borestad@netent.com>"
   ],
+  "workspaces": "examples/**",
   "scripts": {
     "ci": "yarn lint && yarn test --coverage --ci && yarn build",
     "build": "yarn build:types && yarn build:js",
-    "build:js": "babel src --out-dir dist --extensions \".ts,.tsx\" --source-maps true",
+    "build:js": "babel examples --out-dir dist --extensions \".ts,.tsx\" --source-maps true",
     "build:types": "tsc --emitDeclarationOnly",
-    "format": "prettier --write 'src/**/*.ts' && yarn lint --fix",
+    "format": "prettier --write 'examples/**/*.ts' && yarn lint --fix",
     "lint": "tslint -c tslint.json --project tsconfig.json -t codeFrame",
     "preinstall": "rm -f .git/hooks/pre-commit || true",
     "postinstall": "if-env NODE_ENV=production && true || node node_modules/husky/husky.js install",
@@ -88,8 +89,8 @@
       "text-summary"
     ],
     "collectCoverageFrom": [
-      "src/**/*.{ts,tsx}",
-      "!src/**/*.d.ts"
+      "examples/**/*.{ts,tsx}",
+      "!examples/**/*.d.ts"
     ],
     "modulePathIgnorePatterns": [
       "<rootDir>/dist"
