--- a/examples/example-babylon1/package.json
+++ b/examples/example-babylon1/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@babel/cli": "7.1.5",
-    "babylonjs": "4.0.0-alpha.10"
+    "babylonjs": "4.0.0-alpha.10",
+    "typescript": "3.1.6"
   }
 }
