--- a/examples/example-babylon1/tsconfig.json
+++ b/examples/example-babylon1/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "extends": "../../tsconfig.json",
     "compilerOptions": {
+        "noUnusedLocals": false,
         "outDir": "dist",
         "module": "esnext"
     }
