--- a/package.json
+++ b/package.json
@@ -59,46 +59,8 @@
     "useTabs": false,
     "parser": "typescript"
   },
-  "jest": {
-    "testEnvironment": "node",
-    "transform": {
-      "^.+\\.tsx?$": "ts-jest"
-    },
-    "coverageThreshold": {
-      "global": {
-        "branches": 80,
-        "functions": 80,
-        "lines": 80,
-        "statements": -10
-      }
-    },
-    "bail": true,
-    "silent": false,
-    "verbose": false,
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "jsx",
-      "json",
-      "node"
-    ],
-    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(ts)x?$",
-    "coverageDirectory": "coverage",
-    "coverageReporters": [
-      "lcov",
-      "text",
-      "text-summary"
-    ],
-    "collectCoverageFrom": [
-      "examples/**/*.{ts,tsx}",
-      "!examples/**/*.d.ts"
-    ],
-    "modulePathIgnorePatterns": [
-      "<rootDir>/dist"
-    ]
-  },
   "devDependencies": {
+    "del-cli": "1.1.0",
     "husky": "1.1.4",
     "lint-staged": "8.0.5",
     "prettier": "1.15.2"
