--- a/examples/example-unittests/package.json
+++ b/examples/example-unittests/package.json
@@ -2,6 +2,9 @@
   "name": "example-unittests",
   "version": "1.0.0",
   "main": "index.ts",
+  "scripts": {
+    "test": "jest"
+  },
   "dependencies": {
     "typescript": "3.2.1"
   }
