--- a/examples/example-lib1/package.json
+++ b/examples/example-lib1/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "example-unittests",
+  "name": "example-lib1",
+  "private": true,
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
