--- a/examples/example-babylon1/tsconfig.json
+++ b/examples/example-babylon1/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "outDir": "dist",
     "rootDir": "./",
     "baseUrl": "./"
