Renamed project to 'starterkit'

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@netent/boilerplate-3d",
+  "name": "@netent/starterkit",
   "version": "0.0.1",
   "private": true,
   "license": "UNLICENSED",
