--- a/.gitignore
+++ b/.gitignore
@@ -135,7 +135,10 @@ dist
 
 # Don't allow both yarn.lock & package-lock.json
 package-lock.json
+examples/**/yarn.lock
 
 # Don't allow a mix of ts and js files
 src/**/*.js
 
+# Reports
+*-report.json
