--- a/.gitignore
+++ b/.gitignore
@@ -144,7 +144,7 @@ src/**/*.js
 
 # Reports
 *-report.json
-
+.pnp*
 
 # -----------------------------------------------------------------------------
 ### IDEA
