--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   ],
   "scripts": {
     "ci": "yarn lint && yarn test --coverage --ci && lerna run build --stream",
-    "fix": "prettier --write 'examples/**/*.ts' && yarn lint --fix",
-    "lint": "lerna run lint -- ",
+    "fix": "prettier --write 'examples/**/*.ts' && yarn lint",
+    "lint": "lerna run lint",
     "preinstall": "rm -f .git/hooks/pre-commit || true",
     "postinstall": "if-env NODE_ENV=production && true || node node_modules/husky/husky.js install",
     "test": "jest --notify",
