--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
 engine-strict = true
-registry = "https://artifactory.netent.com/artifactory/api/npm/npm-virtual/"
+registry=https://artifactory.netent.com/artifactory/api/npm/casino-software-snapshots-npm-local/
