--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@netent/starterkit",
-  "version": "2.0.3-alpha.e1b3b657",
+  "version": "1.0.0",
   "private": true,
   "license": "UNLICENSED",
   "author": {
@@ -16,7 +16,7 @@
     "examples/example-lib1"
   ],
   "scripts": {
-    "ci": "yarn && yarn lint && yarn test --coverage --ci && lerna run build --stream && mono release",
+    "ci": "yarn && yarn lint && yarn test --coverage --ci && lerna run build --stream && lerna publish",
     "fix": "prettier --write 'examples/**/*.ts' && yarn lint",
     "lint": "lerna run lint",
     "preinstall": "rm -f .git/hooks/pre-commit || true",
