Add git status command

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "examples/example-lib1"
   ],
   "scripts": {
-    "ci": "yarn && yarn lint && yarn test --coverage --ci && lerna run build --stream && lerna publish",
+    "ci": "yarn && yarn lint && yarn test --coverage --ci && lerna run build --stream && git status && git diff && lerna publish",
     "fix": "prettier --write 'examples/**/*.ts' && yarn lint",
     "lint": "lerna run lint",
     "preinstall": "rm -f .git/hooks/pre-commit || true",
