--- a/examples/example-lib1/package.json
+++ b/examples/example-lib1/package.json
@@ -2,6 +2,7 @@
   "name": "example-lib1",
   "private": false,
   "version": "1.0.3",
+  "license": "UNKNOWN",
   "main": "index.ts",
   "scripts": {
     "test": "jest",
