--- a/.gitignore
+++ b/.gitignore
@@ -212,3 +212,7 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+
+
+# Avoid Jenkins error "Working tree has uncommitted changes"
+git-vars
