Parallel the testing to improve performance

--- a/examples/example-lib1/package.json
+++ b/examples/example-lib1/package.json
@@ -10,7 +10,7 @@
   },
   "main": "index.ts",
   "scripts": {
-    "test": "jest",
+    "test": "jest --notify",
     "lint": "tslint -c ../../tslint.json --project tsconfig.json -t codeFrame --fix",
     "build": "exit 0"
   },
