--- a/.gitattributes
+++ b/.gitattributes
@@ -68,3 +68,11 @@
 *.PDF  diff=astextplain
 *.rtf  diff=astextplain
 *.RTF  diff=astextplain
+
+
+# Don't allow people to merge changes to these generated files, because the result
+# may be invalid. You need to run "rush update"  or "yarn install" or "npm install" or "pnpm install" again,
+# depending on what package manager you're using
+shrinkwrap.yaml              merge=binary
+npm-shrinkwrap.json          merge=binary
+yarn.lock                    merge=binary
