--- a/examples/example-babylon1/package.json
+++ b/examples/example-babylon1/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "example-babylon1",
+  "name": "@scope/example-babylon1",
   "private": true,
-  "version": "3.0.0",
+  "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
     "clean": "rm -rf dist",
