--- a/examples/example-lib1/tsconfig.json
+++ b/examples/example-lib1/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
       "noUnusedLocals": false,
       "outDir": "dist",
+      "rootDir": "src",
       "module": "esnext"
   }
 }
