--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
   "scripts": {
     "ci": "./bin/ci",
     "build": "lerna run build --parallel --stream",
+    "clean": "git clean -dxf -e node_modules",
     "fix": "prettier --write 'examples/**/*.ts' && yarn lint",
     "lint": "lerna run lint --parallel",
     "preinstall": "rm -f .git/hooks/pre-commit || true",
-    "postinstall": "if-env NODE_ENV=production && true || node node_modules/husky/husky.js install",
+    "postinstall": "yarn run clean && if-env NODE_ENV=production && true || node node_modules/husky/husky.js install",
     "test": "lerna exec -- yarn test",
     "test:watch": "jest --watch --notify",
     "typecheck": "tsc --noEmit",
