--- a/lerna.json
+++ b/lerna.json
@@ -1,10 +1,7 @@
 {
   "npmClient": "yarn",
   "useWorkspaces": true,
-  "packages": [
-    "examples/example-babylon1",
-    "examples/example-lib1"
-  ],
+  "packages": ["examples/*"],
   "command": {
     "version": {
       "allowBranch":["master", "feature/*"],
