--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,27 @@
   "references": [
     //{ "path": "examples/*", }
   ],
+  "exclude": [
+    // Test files are already covered by Jest
+    "**/*.test.ts",
+    "node_modules",
+    "dist",
+    "typings/browser.d.ts",
+  ],
+
   "compilerOptions": {
+
+    // ------------------------------------------------------------------------
+    // Plugins
+    // ------------------------------------------------------------------------
     "plugins": [
       { "name": "typescript-tslint-plugin" }
     ],
-    /* Basic Options */
+
+
+    // ------------------------------------------------------------------------
+    // Basic options
+    // ------------------------------------------------------------------------
     "target": "esnext",                       /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017','ES2018' or 'ESNEXT'. */
     "module": "commonjs",                     /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */
     // "lib": [],                             /* Specify library files to be included in the compilation. */
@@ -26,7 +42,9 @@
     // "downlevelIteration": true,            /* Provide full support for iterables in 'for-of', spread, and destructuring when targeting 'ES5' or 'ES3'. */
     // "isolatedModules": true,               /* Transpile each file as a separate module (similar to 'ts.transpileModule'). */
 
-    /* Strict Type-Checking Options */
+    // ------------------------------------------------------------------------
+    // Strict Type-Checking Options
+    // ------------------------------------------------------------------------
     "strict": true,                           /* Enable all strict type-checking options. */
     "noImplicitAny": false,                   /* Raise error on expressions and declarations with an implied 'any' type. */
     // "strictNullChecks": true,              /* Enable strict null checks. */
@@ -41,7 +59,9 @@
     // "noImplicitReturns": true,             /* Report error when not all code paths in function return a value. */
     // "noFallthroughCasesInSwitch": true,    /* Report errors for fallthrough cases in switch statement. */
 
-    /* Module Resolution Options */
+    // ------------------------------------------------------------------------
+    // Module Resolution Options
+    // ------------------------------------------------------------------------
     "moduleResolution": "node",               /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
     "baseUrl": ".",                           /* Base directory to resolve non-absolute module names. */
     // "paths": {},                           /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
@@ -52,17 +72,25 @@
     "esModuleInterop": true,                  /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
     // "preserveSymlinks": true,              /* Do not resolve the real path of symlinks. */
 
-    /* Source Map Options */
+    // ------------------------------------------------------------------------
+    // Source Map Options
+    // ------------------------------------------------------------------------
+
     // "sourceRoot": "./",                    /* Specify the location where debugger should locate TypeScript files instead of source locations. */
     // "mapRoot": "./",                       /* Specify the location where debugger should locate map files instead of generated locations. */
     // "inlineSourceMap": true,               /* Emit a single file with source maps instead of having a separate file. */
     // "inlineSources": true,                 /* Emit the source alongside the sourcemaps within a single file; requires '--inlineSourceMap' or '--sourceMap' to be set. */
 
-    /* Experimental Options */
-    "experimentalDecorators": true,        /* Enables experimental support for ES7 decorators. */
-    "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
 
-    /* Advanced Options */
+    // ------------------------------------------------------------------------
+    // Experimental Options
+    // ------------------------------------------------------------------------
+    "experimentalDecorators": true,           /* Enables experimental support for ES7 decorators. */
+    "emitDecoratorMetadata": true,            /* Enables experimental support for emitting type metadata for decorators. */
+
+    // ------------------------------------------------------------------------
+    // Advanced Options
+    // ------------------------------------------------------------------------
     // "declarationDir": "dist"               /* Output directory for generated declaration files. */
   }
 }
