Fix CI build error

--- a/config/helpers/package.json
+++ b/config/helpers/package.json
@@ -4,6 +4,9 @@
     "description": "Configuration Helpers",
     "main": "index.ts",
     "private": true,
+    "scripts": {
+        "test": "exit 0 || true"
+    },
     "devDependencies": {
         "execa": "1.0.0",
         "lodash": "4.17.11"
