--- a/examples/example-lib2/tsconfig.json
+++ b/examples/example-lib2/tsconfig.json
@@ -1,22 +1,12 @@
 {
-  "compilerOptions": {
-    "moduleResolution": "node",
-    "target": "es5",
-    "module":"es2015",
-    "lib": ["es2015", "es2016", "es2017", "dom"],
-    "strict": true,
-    "sourceMap": true,
-    "declaration": true,
-    "allowSyntheticDefaultImports": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "declarationDir": "dist/types",
-    "outDir": "dist/lib",
-    "typeRoots": [
-      "node_modules/@types"
-    ]
-  },
+  "extends": "../../tsconfig.json",
   "include": [
     "src"
-  ]
+  ],
+  "compilerOptions": {
+      "noUnusedLocals": false,
+      "outDir": "dist",
+      "rootDir": "src",
+      "module": "esnext"
+  }
 }
