--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "jest": "23.6.0",
     "jest-cli": "23.6.0",
     "lerna": "^3.10.5",
+    "npm-run-all": "4.1.5",
     "ts-jest": "23.10.5",
     "tslint": "5.12.1",
     "tslint-config-prettier": "1.17.0",
