--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "parser": "typescript"
   },
   "devDependencies": {
+    "@babel/register": "7.0.0",
     "del-cli": "1.1.0",
     "husky": "1.3.1",
     "lint-staged": "8.1.0",
@@ -66,7 +67,7 @@
   },
   "dependencies": {
     "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.2.2",
+    "@babel/core": "7.2.2",
     "@babel/plugin-proposal-class-properties": "^7.2.3",
     "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
     "@babel/preset-env": "^7.2.3",
