--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
     "ci": "./bin/ci",
     "build": "lerna run build --parallel --stream",
     "clean": "git clean -dxf -e node_modules",
-    "fix": "prettier --write 'examples/**/*.ts' && yarn lint",
+    "fix": "prettier --write \"examples/**/*.ts\" && yarn lint",
+    "prettier:": "prettier --write \"examples/**/*.ts\"",
     "lint": "lerna run lint --parallel",
     "preinstall": "rm -f .git/hooks/pre-commit || true",
     "postinstall": "if-env NODE_ENV=production && true || node node_modules/husky/husky.js install",
-    "test": "lerna exec -- yarn test",
+    "test": "jest -c config/jest/jest.config.js",
+    "test:workspace": "lerna exec -- yarn test",
     "test:watch": "jest --watch --notify",
-    "typecheck": "tsc --noEmit",
-    "typecheck:watch": "yarn typecheck -- --watch",
+    "typecheck": "lerna exec -- yarn typecheck",
     "upgrade:deps": "yarn upgrade-interactive --latest",
     "install:yarn": "npm install yarn@`node -p -e \"require('./package.json').dependencies.yarn\"` --ignore-scripts --no-save --no-optional --no-package-lock"
   },
