--- a/config/helpers/package.json
+++ b/config/helpers/package.json
@@ -5,9 +5,12 @@
     "main": "index.ts",
     "private": true,
     "scripts": {
-        "test": "exit 0 || true"
+        "test": "exit 0 || true",
+        "typecheck": "tsc --noEmit"
     },
-    "devDependencies": {
+    "dependencies": {
+        "@types/execa": "0.9.0",
+        "@types/lodash": "4.14.123",
         "execa": "1.0.0",
         "lodash": "4.17.11"
     }
