--- a/config/webpack/package.json
+++ b/config/webpack/package.json
@@ -5,7 +5,8 @@
     "main": "index.ts",
     "private": true,
     "scripts": {
-        "test": "exit 0 || true"
+        "test": "exit 0 || true",
+        "typecheck": "tsc --noEmit"
     },
     "devDependencies": {
         "compression-webpack-plugin": "2.0.0",
