--- a/examples/example-lib1/package.json
+++ b/examples/example-lib1/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@scope/example-lib1",
-  "private": false,
+  "private": true,
   "version": "1.0.0",
   "license": "UNLICENSED",
   "author": {
@@ -13,7 +13,8 @@
     "test": "jest --notify",
     "lint": "tslint -c ../../tslint.json --project tsconfig.json -t codeFrame --fix",
     "compile": "rimraf dist && tsc -b tsconfig.json --listEmittedFiles",
-    "build": "rimraf dist && microbundle build src/index.ts -o dist"
+    "build": "rimraf dist && microbundle build src/index.ts -o dist",
+    "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
     "microbundle": "0.11.0",
