--- a/examples/example-lib2/package.json
+++ b/examples/example-lib2/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@scope/example-lib2",
-  "private": false,
+  "private": true,
   "version": "1.0.0",
   "license": "UNLICENSED",
   "author": {
@@ -20,7 +20,8 @@
     "compile:ts": "rimraf dist && tsc -b tsconfig.json",
     "compile:js": "babel src --root-mode upward --verbose --out-dir lib --extensions \".ts,.tsx\" --source-maps inline",
     "build": "rimraf dist && microbundle build src/index.ts -o dist/",
-    "dist": "NODE_ENV=production webpack --config ../../config/webpack/index.ts --colors --hide-modules --display-error-details"
+    "dist": "NODE_ENV=production webpack --config ../../config/webpack/index.ts --colors --hide-modules --display-error-details",
+    "typecheck": "tsc --noEmit"
   },
   "files": [
     "dist/*",
