Move out typecheck script

--- a/config/helpers/package.json
+++ b/config/helpers/package.json
@@ -5,8 +5,7 @@
     "main": "index.ts",
     "private": true,
     "scripts": {
-        "test": "exit 0 || true",
-        "typecheck": "tsc --noEmit"
+        "test": "exit 0 || true"
     },
     "dependencies": {
         "@types/execa": "0.9.0",
