--- a/examples/example-babylon1/package.json
+++ b/examples/example-babylon1/package.json
@@ -10,8 +10,7 @@
     "build:types": "tsc --emitDeclarationOnly",
     "start": "parcel index.html",
     "lint": "tslint -c ../../tslint.json --project tsconfig.json -t codeFrame",
-    "test": "jest --notify",
-    "typecheck": "tsc --noEmit"
+    "test": "jest --notify"
   },
   "dependencies": {
     "@babel/cli": "7.2.3",
