--- a/examples/example-lib1/tsconfig.json
+++ b/examples/example-lib1/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
       "noUnusedLocals": false,
-      "outDir": "dist",
+      "outDir": "node_modules/.tmp/dist",
       "rootDir": "src",
       "module": "esnext"
   }
