Try to speedup yarn builds

--- a/.yarnrc
+++ b/.yarnrc
@@ -3,4 +3,5 @@ save-exact true
 loglevel "info"
 progress true
 ignore-optional false
+link-duplicates true
 registry "https://artifactory.netent.com/artifactory/api/npm/npm-virtual/"
