Cleanup of tsconfig and sonar config

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,13 +2,13 @@
 sonar.sources=src
 
 # Exclude third party libraries
-sonar.exclusions=**/*.html,**/*.obj,**/*.g3dj,**/*.obj,**/*.jpg,**/*.lock,**/*.html,**/*.txt,**/*.xml,**/*.css,**/*.md,**/*.vert,**/*.frag,**/*.ts,**/*.json,**/multimedia/**,**/we3d/server/**
+sonar.exclusions=**/*.html,**/*.obj,**/*.g3dj,**/*.obj,**/*.jpg,**/*.lock,**/*.html,**/*.txt,**/*.xml,**/*.css,**/*.md,**/*.vert,**/*.frag,**/*.ts,**/*.tsx,**/*.json
 
 # Exclude from coverage calculation
-sonar.coverage.exclusions=src/**/*View.js
+sonar.coverage.exclusions=src/**/*.js
 
 # Third party libraries
-#sonar.libraries=packages/javascript/external/*.js
+#sonar.libraries=node_modules/**/*.js
 
 # Tests
 # sonar.tests=src
